# us_accidents

./: README.md  pyproject.toml
functions/: categorias_severidade.py
notebooks/: us_accidents.ipynb
